--- a/index.html
+++ b/index.html
@@ -10,19 +10,25 @@
     <nav>
     <h1>Links for all projects which i have done</h1>
     <hr>
-    <li>First HTML Project <a href="exercise 01/index.html">Click Here</li></a>
+    <li>Exercise 01<a href="exercise 01/index.html">Click Here</li></a>
     <br>
     <br>
-    <li>About Me <a href="exercise 02/Experiment 01.html">Click Here</li></a>
+    <li>Exercise 02 <a href="exercise 02/Experiment 01.html">Click Here</li></a>
     <br>
     <br>
-    <li>I Like Bikes <a href="exercise 03/Experiment 02.html">Click Here</li></a>
+    <li>Exercise 03 <a href="exercise 03/Experiment 02.html">Click Here</li></a>
     <br>
     <br>
-    <li>Student ID Card <a href="exercise 04/Experiment 03.html">Click Here</li></a>
+    <li>Exercise 04 <a href="exercise 04/Experiment 03.html">Click Here</li></a>
     <br>
     <br>
-    <li>Survey Form <a href="exercise 05/Experiment 05.html">Click Here</li></a>
+    <li>Exercise 05 <a href="exercise 05/Experiment 05.html">Click Here</li></a>
+    <br>
+    <br>
+    <li>Exercise 06 <a href="exercise 06/Experiment 06.html">Click Here</li></a>
+    <br>
+    <br>
+    <li>Exercise 06 <a href="exercise 06/Experiment 06(01).html">Click Here</li></a>
     <br>
     </nav>
 </body>
