--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <br>
     <li>Exercise 06 <a href="exercise 06/Experiment 06(01).html">Click Here</li></a>
     <br>
+    <br>
+    <li>Exercise 07 <a href="exercise 07/form.html">Click Here</li></a>
+    <br>
     </nav>
 </body>
 </html>
